# Vision

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
engine/: CMakeLists.txt
engine/core/: App.cpp  App.h  Input.cpp  Input.h  Macros.h  Window.cpp  Window.h
engine/renderer/: Buffer.cpp  Buffer.h  BufferLayout.h  Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  Mesh.cpp  Mesh.h  MeshGenerator.cpp  MeshGenerator.h  Pipeline.h  RenderAPI.h  RenderCommand.h  RenderContext.cpp  RenderContext.h  RenderDevice.cpp  RenderDevice.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderLibrary.h  Texture.cpp  Texture.h  VertexArray.cpp
engine/renderer/metal/: MetalBuffer.cpp  MetalBuffer.h  MetalCompiler.cpp  MetalCompiler.h  MetalContext.cpp  MetalContext.h  MetalContext.mm  MetalDevice.cpp  MetalDevice.h  MetalFramebuffer.cpp  MetalFramebuffer.h  MetalPipeline.cpp  MetalPipeline.h  MetalRenderPass.cpp  MetalRenderPass.h  MetalShader.cpp  MetalShader.h  MetalTexture.cpp  MetalTexture.h  MetalType.h
engine/renderer/opengl/: GLBuffer.cpp  GLBuffer.h  GLCompiler.cpp  GLCompiler.h  GLContext.cpp  GLContext.h  GLDevice.cpp  GLDevice.h  GLFramebuffer.cpp  GLFramebuffer.h  GLPipeline.h  GLProgram.cpp  GLProgram.h  GLTexture.cpp  GLTexture.h  GLTypes.h  GLVertexArray.cpp  GLVertexArray.h  VertexArray.cpp  VertexArray.h
engine/renderer/primitive/: APIDevice.h  Buffer.h  Framebuffer.cpp  Framebuffer.h  ObjectCache.h  Pipeline.h  RenderPass.h  Shader.h  Texture.cpp  Texture.h
engine/renderer/shader/: Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderParser.cpp  ShaderParser.h  ShaderReflector.cpp  ShaderReflector.h
engine/ui/: ImGuiRenderer.cpp  ImGuiRenderer.h  UIInput.cpp  UIInput.h
lumina/: CMakeLists.txt  main.cpp
resources/: computeShader.glsl  distShader.glsl  gridShader.glsl  lodShader.glsl  newShader.glsl  phongShader.glsl  planeShader.glsl  skyShader.glsl  waterFrag.spv  waterVertex.spv  waveShader.frag  waveShader.glsl  waveShader.vert
specks/: CMakeLists.txt  Main.cpp
specks/app/: App.cpp  App.h  ParticleRenderer.cpp  ParticleRenderer.h
specks/simulation/: ColorMatrix.cpp  ColorMatrix.h  Particle.h  System.cpp  System.h
specks/ui/: Settings.h  Shapes.h  UIInput.cpp  UIInput.h
src/core/: App.cpp  App.h  main.cpp
src/renderer/: Buffer.h  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  Shader.cpp  Shader.h  VertexArray.h
src/ui/: ImGuiRenderer.h  UIInput.cpp
waves/: CMakeLists.txt  main.cpp
